[package]
name = "record-thing-ome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json"]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
json = "0.12.4"
getopts = "0.2.15"
hocon = "0.9.0"
serde = { version = "1.0.164", features = ["derive"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
