[package]
name = "record-thing-ome"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json"]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
getopts = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.139"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
