[package]
name = "record-thing-ome"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json"]}
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.164", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
